--- a/DAY3/index.html
+++ b/DAY3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 1 -JS</title>
+    <title>Day 3 -JS</title>
 </head>
 <body>
     <h2>HELLO BACHEE</h2>
@@ -16,5 +16,5 @@
     <script src="app.js">
          console.log("Hello, Bacheeee!"); // Output to the console
     </script>
-
+</body>
 </html>
