--- a/DAY4/practice-2-continution/index.html
+++ b/DAY4/practice-2-continution/index.html
@@ -10,8 +10,17 @@
   <body>
     <header>
       <h1>CookBook 📖👩‍🍳</h1>
+      <button>Home</button>
     </header>
     <main id="root">
+      <div class="card">
+        <p>DUMMYCARD TITLE</p>
+        <p>DUMMYCARD CUISINE</p>
+        <p>DUMMYCARD RATING</p>
+        <p>DUMMYCARD SERVINGS</p>
+        <button onclick="handleCardClick()">click</button>
+
+      </div>
         
     </main>
     <footer>
