POPUP OPEN AND CLOSE AND POPUP CONTENT MANIPULATION

--- a/DAY4/practice-2-continution/practice-2 continution/index.html
+++ b/DAY4/practice-2-continution/practice-2 continution/index.html
@@ -19,6 +19,7 @@
         <p>DUMMYCARD RATING</p>
         <p>DUMMYCARD SERVINGS</p>
         <button onclick="handleCardClick()">click</button>
+        
 
       </div>
         
@@ -26,6 +27,14 @@
     <footer>
       <p>&copy; 2025 Recipe -APP</p>
     </footer>
+    <div id="popup" class="popup">
+      <div class="popup-content">
+       <button onclick="ClosePopUp()">X</button>
+       <div id = "cont">
+        <h2>Recipe Details</h2>
+       </div>
+      </div>
+      </div>
     <script src="script.js"></script>
   </body>
 </html>
