Updated timer app

--- a/DAY5/timerapp/index.html
+++ b/DAY5/timerapp/index.html
@@ -11,10 +11,10 @@
 <body>
     <div id="timer-cointainer">
         <p id="timer-text">00:00:00</p>
-        <button onclick="handleReset()">Reset</button>
-        <button onclick="handlePause()">Pause</button>
-        <button onclick="handleResume()">Resume</button>
-        <button onclick="handleLap()">Lap</button>
+        <button onclick="Reset()">Reset</button>
+        <button onclick="Pause()">Pause</button>
+        <button onclick="Resume()">Resume</button>
+        <button onclick="Lap()">Lap</button>
     </div>
     <div id="root"></div>
 
