youtube-clone-part1

--- a/DAY6/Yotube-Clone/index.html
+++ b/DAY6/Yotube-Clone/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
+    <div id="youtube-root">
+      <div id="cards-parent"></div>
+    </div>
+
     <script src="./homepage.js"></script>
   </body>
 </html>
